fix search bar width on mobile

--- a/materialize-html-css/css/custom-styles.css
+++ b/materialize-html-css/css/custom-styles.css
@@ -194,7 +194,7 @@ h2 {
   }
   
   #meme-input {
-    width: 85%;
+    width: 75%;
   }
 
   #meme-Search {
